docker-compose-test.yml testato e funzionante!

--- a/esercizi/compose/compose-composition/docker-compose-test.yml
+++ b/esercizi/compose/compose-composition/docker-compose-test.yml
@@ -30,4 +30,4 @@ services:
     restart: on-failure
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.web-ui.rule=Host(vagrantbox.local)"
+      - "traefik.http.routers.web-ui.rule=Host(`vagrantbox.local`)"
